로그인, 회원가입, 아이디/비번찾기 페이지 추가

--- a/css/reset.css
+++ b/css/reset.css
@@ -17,3 +17,14 @@ a {
 body {}
 
 .header {}
+
+.txt_div {
+  color: #ccc;
+  font-size: 11px;
+  vertical-align: 2px;
+  margin: 0 9px;
+}
+
+input:focus::placeholder {
+  color: transparent;
+}
