--- a/css/find_myinfo.css
+++ b/css/find_myinfo.css
@@ -3,6 +3,10 @@
     font-size: 14px;
 }
 
+body {
+    height: 100%;
+}
+
 .header {
     position: relative;
     height: 100px;
@@ -48,20 +52,37 @@
     height: 300px;
     left: 50%;
     transform: translateX(-50%);
-    position: relative;
-    border-top: 2px solid #ccc;
-    background: #f8f8f8;
-    padding: 30px 25px 0 25px;
+    position: absolute;
+    padding: 0 25px;
 }
 
 input {
     width: 100%;
     margin-bottom: 10px;
+    border-radius: 10px;
+    height: 40px;
+    padding: 0 15px;
+    font-size: 15px;
+    border: 1px solid #ccc;
+    color: #777;
 }
 
-.check_member_txt p {
+.find_id,
+.find_pw {
+    border-top: 2px solid #ccc;
+    background: #f8f8f8;
+    padding: 20px 30px;
+    text-align: center;
+}
+
+.find_id p,
+.find_pw p {
     font-size: 22px;
     margin-bottom: 20px;
+}
+
+form {
+    margin-top: 10px;
 }
 
 em {
@@ -69,4 +90,14 @@ em {
     color: #741300;
     font-style: normal;
     font-weight: bold;
+}
+
+button {
+    background: #741300;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    height: 50px;
+    margin-bottom: 10px;
+    border-radius: 10px;
 }
