--- a/css/login.css
+++ b/css/login.css
@@ -45,7 +45,7 @@
 
 .container {
     width: 500px;
-    height: 650px;
+    height: 300px;
     left: 50%;
     transform: translateX(-50%);
     position: relative;
@@ -55,8 +55,7 @@
 }
 
 input,
-.enter_login button,
-#country_No {
+.enter_login button {
     width: 100%;
     margin-bottom: 10px;
     border-radius: 10px;
@@ -66,18 +65,6 @@ input,
     font-weight: 600;
     border: 1px solid #ccc;
     color: #777;
-}
-
-.country_code {
-    width: 100%;
-    display: block;
-    box-sizing: border-box;
-}
-
-#country_No {
-    color: #000;
-    margin-right: 20px;
-    outline: 1px solid red;
 }
 
 .check_member_txt p {
@@ -110,51 +97,4 @@ em {
 
 .find_btn a span {
     color: #888;
-}
-
-button {
-    width: 100%;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    height: 50px;
-    padding: 0 15px;
-    font-size: 16px;
-    border: none;
-    color: #fff;
-    background: #741300;
-}
-
-.check_member_txt p {
-    font-size: 22px;
-    margin-bottom: 20px;
-}
-
-em {
-    /* color: #ee6900; */
-    color: #741300;
-    font-style: normal;
-    font-weight: bold;
-}
-
-.phone_num {
-    width: 70%;
-}
-
-.phone_send {
-    width: 28%;
-    vertical-align: middle;
-    float: right;
-    font-size: 14px;
-}
-
-h6 {
-    margin-bottom: 5px;
-}
-
-input {
-    margin-bottom: 15px;
-}
-
-.phone_position>input {
-    margin-bottom: 0;
 }
