--- a/css/reset.css
+++ b/css/reset.css
@@ -4,6 +4,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Noto Sans KR', sans-serif;
+  /* overflow: hidden; */
+  /* overflow-x: hidden; */
 }
 
 ul {
@@ -27,4 +29,8 @@ body {}
 
 input:focus::placeholder {
   color: transparent;
+}
+
+.highlight {
+  color: #FEF1AB;
 }
