--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .header_content {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     width: 100%;
     overflow-x: hidden;
 }
@@ -52,88 +52,119 @@
 
 .lnb li {
     float: right;
-    margin-right: 20px;
+    margin-right: 25px;
 }
 
 .lnb li:first-child {
     margin-right: 0px;
 }
 
+.lnb li a {
+    font-size: 14px;
+}
+
+
 .lnb li a:hover {
-    font-weight: bold;
     color: #FEF1AB;
 }
 
-.bg {
+.gnb_menu {
+    height: 50px;
+}
+
+.gnb_menu>li {
+    position: relative
+}
+
+.gnb_menu_sub_wrap {
     position: absolute;
-    width: 100%;
     display: none;
-    z-index: -1;
-    background: #000;
-    padding-top: 0;
-    margin-top: 0;
-    padding-bottom: 0;
+    z-index: 9999;
+    left: 0;
+    top: 100%;
+    width: 100%;
+}
+
+.gnb_menu_sub>li {
+    line-height: 25px;
+    border-bottom: 1px solid #f3f3f3
+}
+
+.gnb_menu_sub>li:last-child {
+    border-bottom: none
+}
+
+.gnb_menu_sub>li a {
+    font-size: 12px;
+    display: block;
+    text-align: center;
+    padding: 6px 12px;
+    line-height: 20px;
+    transition: all 0.25s ease-in-out;
+}
+
+.gnb_menu_sub>li a:hover {
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
+    background: #999999 !important;
+}
+
+.gnb_contents>ul {
     margin-bottom: 0;
+    width: 770px;
+    height: 100%;
+}
+
+.gnb_contents>ul:after {
+    display: block;
+    visibility: hidden;
+    clear: both;
+    content: ""
+}
+
+.gnb_contents>ul>li {
+    float: left;
+    width: 105px;
+    height: 100%;
+    font-weight: bold;
+}
+
+.gnb_contents>ul>li>a {
+    display: block;
+    text-align: center;
+    padding: 0 0px 40px;
+    height: 40px;
+    overflow: hidden;
+    font-size: 14px;
+    white-space: nowrap;
+    transition: all 0.25s ease-in-out;
+}
+
+.gnb_contents>ul>li>a .menu_span {
+    display: inline-block;
+    padding: 7px 8px;
+    line-height: 20px;
+    font-size: 16px;
+}
+
+.gnb_contents>ul>li>a:hover .menu_span {
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 4px;
+    transition: all 0.25s ease-in-out;
 }
 
 .gnb {
     position: absolute;
-    top: 105px;
+    top: 130px;
     left: 50%;
     transform: translateX(-50%);
     width: 980px;
     padding: 5px 0;
     z-index: 100;
+    height: 45px;
 }
 
-.gnb>li {
-    position: relative;
-}
-
-.gnb_contents {
-    width: 980px;
-    margin: 0 auto;
-    position: relative;
-}
-
-.gnb_menu {
-    display: inline-flex;
-    overflow: hidden;
-    padding-left: 10px;
-}
-
-.gnb_menu>li {
-    float: left;
-    width: 100px;
-    padding: 20px 0;
-}
-
-.gnb_menu>li>a {
-    display: block;
-    font-weight: bold;
-}
-
-.gnb_menu>li:nth-child(4) a {
-    display: block;
-    margin-left: 15px;
-}
-
-.depth2 {
-    height: 200px;
-    padding-top: 0px;
-    margin-top: 0px;
-    padding-bottom: 0px;
-    margin-bottom: 0px;
-    display: none;
-}
-
-.depth2 a:hover,
-.depth2 a:active,
-.depth2 a:focus {
-    font-weight: bold;
-    /* color: #ffeea1; */
-    color: #FEF1AB;
-}
 
 .select_chart {
     padding-left: 10px;
@@ -180,6 +211,17 @@ table {
     font-weight: bold;
 }
 
+footer {
+    width: 980px;
+    margin: 0 auto;
+    padding-top: 20px;
+    margin-top: 100px;
+    font-size: 12px;
+    clear: both;
+    height: 150px;
+}
+
+
 footer a {
     width: 150px;
     float: left;
@@ -192,7 +234,7 @@ footer a {
 }
 
 .company_info {
-    line-height: 18px;
+    line-height: 20px;
     /* width: 500px; */
     /* outline: 1px solid blue; */
     /* float: left; */
@@ -217,4 +259,8 @@ footer a {
     content: '|';
     padding: 0 5px;
     /* font-size: 14px; */
+}
+
+.hidden {
+    display: none !important;
 }
