회원정보수정, 회원탈퇴 페이지 작성, 기타 여러가지 수정

--- a/css/help_new_qna.css
+++ b/css/help_new_qna.css
@@ -195,13 +195,13 @@ p {
 
 .write_btn {
     float: right;
-    width: 55px;
-    height: 30px;
+    width: 75px;
+    height: 35px;
     background: #FEF1AB;
     border-radius: 5px;
     font-size: 16px;
     margin-top: 10px;
     text-align: center;
-    padding-top: 3px;
+    line-height: 35px;
     color: rgb(120, 120, 120);
 }
