--- a/css/join.css
+++ b/css/join.css
@@ -45,7 +45,7 @@
 
 .container {
     width: 500px;
-    height: 650px;
+    /* height: 650px; */
     left: 50%;
     transform: translateX(-50%);
     position: relative;
