--- a/css/payment.css
+++ b/css/payment.css
@@ -165,6 +165,19 @@
     margin-top: 10px;
 }
 
+.product_img {
+    margin: 0 auto;
+    width: 980px;
+    margin-top: 40px;
+}
+
+.product_img p {
+    margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 22px;
+    /* padding-left: 20px; */
+}
+
 
 .datepicker {
     width: 300px;
